qwen2.5-coder-7b/8_three_tier/1/igw.tf
resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name = "three-tier-internet-gateway"
  }
}
